--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 after_success:
-- mvn clean cobertura:cobertura coveralls:report
+- bash <(curl -s https://codecov.io/bash)
 before_cache:
 - cp /tmp/classpathFile $HOME/CACHE/classpathFile
 before_install:
