--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 after_success:
+- mvn clean cobertura:cobertura
 - bash <(curl -s https://codecov.io/bash)
 before_cache:
 - cp /tmp/classpathFile $HOME/CACHE/classpathFile
